inexact for an exact.

** New functions: scm_short2num, scm_ushort2num, scm_int2num,
   scm_uint2num, scm_size2num, scm_ptrdiff2num, scm_num2short,
   scm_num2ushort, scm_num2int, scm_num2uint, scm_num2ptrdiff,
   scm_num2size.

These are conversion functions between the various ANSI C integral
types and Scheme numbers.  NOTE: The scm_num2xxx functions don't
accept an inexact argument.

** New number validation macros:
   SCM_NUM2{SIZE,PTRDIFF,SHORT,USHORT,INT,UINT}[_DEF]

See above.

** New functions: scm_gc_protect_object, scm_gc_unprotect_object

These are just nicer-named old scm_protect_object and
scm_unprotect_object.

** Deprecated functions: scm_protect_object, scm_unprotect_object

** New functions: scm_gc_[un]register_root, scm_gc_[un]register_roots

These functions can be used to register pointers to locations that
hold SCM values.

** Deprecated function: scm_create_hook.

Its sins are: misleading name, non-modularity and lack of general
usefulness.


Changes since Guile 1.3.4:

* Changes to the distribution

** Trees from nightly snapshots and CVS now require you to run autogen.sh.

We've changed the way we handle generated files in the Guile source
repository.  As a result, the procedure for building trees obtained
from the nightly FTP snapshots or via CVS has changed:
- You must have appropriate versions of autoconf, automake, and
  libtool installed on your system.  See README for info on how to
  obtain these programs.
- Before configuring the tree, you must first run the script
  `autogen.sh' at the top of the source tree.

The Guile repository used to contain not only source files, written by
humans, but also some generated files, like configure scripts and
Makefile.in files.  Even though the contents of these files could be
derived mechanically from other files present, we thought it would
make the tree easier to build if we checked them into CVS.

However, this approach means that minor differences between